Adding activities for Carlos Pignataro

--- a/src/content/champions/carlos-pignataro.yaml
+++ b/src/content/champions/carlos-pignataro.yaml
@@ -19,6 +19,18 @@ social:
 activities:
   - contributionType: writing
     linkedGSFProject: Standards WG
+    subtype: other
+    dateFrom: 2025-10-01
+    dateTo: 2025-10-01
+    title: RFC 9845 - Challenges and Opportunities in Management for Green Networking
+    description: |
+     Reducing humankind's environmental footprint and making technology more environmentally sustainable are among the biggest challenges of our age. Networks play an important part in this challenge. On one hand, they enable applications that help to reduce this footprint. On the other hand, they significantly contribute to this footprint themselves. Therefore, methods to make networking technology itself "greener" and to manage and operate networks in ways that reduce their environmental footprint without impacting their utility need to be explored. This document outlines a corresponding set of opportunities, along with associated research challenges, for networking technology in general and management technology in particular to become greener, i.e., more sustainable, with reduced greenhouse gas emissions and less negative impact on the environment.
+
+     This document is a product of the Network Management Research Group (NMRG) of the Internet Research Task Force (IRTF). This document reflects the consensus of the research group. It is not a candidate for any level of Internet Standard and is published for informational purposes.
+    url: https://www.rfc-editor.org/rfc/rfc9845
+    relatedEvent: Internet Research Task Force (IRTF)
+  - contributionType: writing
+    linkedGSFProject: Standards WG
     subtype: internal-event-talk
     dateFrom: 2025-06-12
     dateTo: 2025-06-12
