Fix typo in OSS contribution type for Ronald Dehuysser's activities

--- a/src/content/champions/ronald-dehuysser.yaml
+++ b/src/content/champions/ronald-dehuysser.yaml
@@ -22,7 +22,7 @@ social:
   linkedin: ronalddehuysser
   twitter: rdehuyss
 activities:
-  - contributionType: OSS Cotribution
+  - contributionType: OSS Contribution
     linkedGSFProject: Carbon Aware SDK
     subtype: all
     dateFrom: 2024-10-01
