Updating bio for Arne Tarara

--- a/src/content/champions/arne-tarara.yaml
+++ b/src/content/champions/arne-tarara.yaml
@@ -9,8 +9,8 @@ pronoun: He/Him
 country: Germany
 city: Berlin
 bio: |
- Arne is the CEO for the the Berlin based Green Software company Green Coding Berlin GmbH. 
- Professional software engineer for 16+ years with roles in CTO and CEO positions he is now a regular speaker at events and conferences for Green Software in Germany as well as the lead engineer of advanced software energy measurements tools like the Green Metrics Tool, Eco-CI and PowerHog with regular releases and contributions to open source tools and articles about research in the domain of sustainable software engineering.
+ Arne is the CEO for the Berlin based Green Software company Green Coding Solutions GmbH. 
+ Professional software engineer for 18+ years with roles in CTO and CEO positions he is now a regular speaker at events and conferences for Green Software as well as the lead engineer of advanced software carbon measurements tools like the Green Metrics Tool, Eco-CI and PowerHog, published researcher in academic journals and main organiser of the ecoCompute green tech conference.
 type: normal
 social:
   github: ArneTR
