Adding activities for Ines Garcia

--- a/src/content/champions/ines-garcia.yaml
+++ b/src/content/champions/ines-garcia.yaml
@@ -121,6 +121,36 @@ activities:
 
      Extended appreciation for Outrage + Optimism, especially Christiana Figueres energy is contagious!"
     url: https://www.linkedin.com/pulse/icj-just-declared-climate-action-legal-duty-ines-garcia-u6aae/
+  - contributionType: organizing
+    linkedGSFProject: Other/Unlisted
+    subtype: online-event
+    dateFrom: 2025-07-01
+    dateTo: 2025-07-01
+    title: "Series: Agile Sustainability Manifesto"
+    subtitle: Agile Alliance Sustainability Initiative
+    description: |
+     "Learning From Peers: Manifesto Series https://www.agilealliance.org/sustainability-manifesto/ 2025 :
+     2nd July Maryse Meinen Jutta Eckstein Ines Garcia https://www.linkedin.com/events/7209147487180201984/comments/
+     16 July Henri van der Horst https://www.linkedin.com/events/7206331765953572865/comments/
+     23 July Sophia Ashley https://www.linkedin.com/events/7208859380262260736/comments/
+     30 July Ani Angelini https://www.linkedin.com/events/7216463413772722176/comments/
+     7 August María Valeria Thompson https://www.linkedin.com/events/7219002781402087425/comments/
+     13 August Joanna Masraff 🌱 https://www.linkedin.com/events/7221550682531663874/comments/
+     20 August Marco Braun https://www.linkedin.com/events/7224079863102496770/comments/
+     27 August Thomas Martin https://www.linkedin.com/events/7226977741378592768/comments/
+     3 September Damián Buonamico https://www.linkedin.com/events/7229157360689164290/comments/
+     10 September Katarina Podboj https://www.linkedin.com/events/7203782477629284352/comments/
+     1 October Willy Wijnands https://www.linkedin.com/events/7234223367845740544/comments/
+     8 October Faith Peterson https://www.linkedin.com/events/7236765753071288320/comments/
+     15 October Sebastian Sobeslavsky https://www.linkedin.com/events/7246909529429348353/comments/
+     22 October Martina Hofmann https://www.linkedin.com/events/7246911778259972097/comments/
+     29 October Joanne Stone https://www.linkedin.com/events/7249492011785809920/comments/
+     5 November Pia Fåk Sunnanbo https://www.linkedin.com/events/7251978550696624128/comments/
+     12 November Paul Selvadurai https://www.linkedin.com/events/7254519881696481280/comments/
+     19 November Brad Peirce https://www.linkedin.com/events/7262482366596583425/comments/
+     26 November Dr. Gail Ferreira https://www.linkedin.com/events/7259615157469818880/comments/
+     3 December Giles Lindsay (FIAP FBCS FCMI) https://www.linkedin.com/events/7257071237900775424/comments/ "
+    url: https://www.linkedin.com/pulse/learning-from-peers-manifesto-series-ines-garcia-zkf3c/
   - contributionType: writing
     linkedGSFProject: Transforming Organisational Software Sustainability
     subtype: personal-blog-post
